# Library-QML-Module-Demo

./: CMakeLists.txt  README.md  main.cpp  main.qml
qmllibs/demolib/: CMakeLists.txt  custom_element.cpp  custom_element.h
